finished mining shell

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -808,8 +808,40 @@ body {
   height: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
+}
+.resourceMiner{
+  height: 104px;
+  width: 800px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.miner{
+  width: 104px;
+  height: 104px;
+  border: 2px solid black;
+}
+.bambooMiner{
+  background-image: url("../img/materials/itemBamboo.png");
+  background-size: 100% 100%;
+}
+
+.woodMiner{
+  background-image: url("../img/materials/itemWood.png");
+  background-size: 100% 100%;
+}
+
+.stoneMiner{
+  background-image: url("../img/materials/itemStone.png");
+  background-size: 100% 100%;
+}
+
+.ironMiner{
+  background-image: url("../img/materials/itemOreIron.png");
+  background-size: 100% 100%;
 }
 
 /*   */
