--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -807,10 +807,19 @@ body {
   width: 80%;
   height: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
+.minertitle{
+  text-align: center;
+  font-size: 30px;
+  font-weight: bolder;
+  margin-bottom: 15px;
+  border-bottom: 2px solid black;
+}
+
 .resourceMiner{
   height: 104px;
   width: 800px;
