added colors for items you can afford or not in shop

--- a/checkpoint3/css/style.css
+++ b/checkpoint3/css/style.css
@@ -122,6 +122,14 @@ main {
   justify-self: center;
 }
 
+.shop-cost {
+  color: #E74C3C;
+}
+.shop-cost.purchasable {
+  color: #0EAC51;
+  ;
+}
+
 /* ANVIL HIT ANIMATION */
 @keyframes shake {
   10%,
