--- a/checkpoint-3/css/style.css
+++ b/checkpoint-3/css/style.css
@@ -1,17 +1,16 @@
 body {
-    background-color: rgb(179, 117, 238);
+    background-color:black;
     display:flex;
     justify-content: center;
-
 }
-
+/*clicker style*/
  button {
-     height: 440px;
-     width: 430px;
+     height: 300px;
+     width: 300px;
      background-color: blueviolet;
      border-radius: 50%;
-     border: 2px black solid;
  }
+
  .button-div {
      display:flex;
      flex-direction: column;
@@ -20,6 +19,7 @@ body {
      height:650px;
      width: 600px;
  }
+
  div {
      height: 100vh;
      width: 100%;
@@ -28,14 +28,24 @@ body {
      align-items: center;
      
  }
+ /* click counter style*/
  p {
     font-family: 'Indie Flower', cursive;
     font-size: 40px;
     color: white;
  }
+ /* timer style*/
 span {
     color: white;
     font-family: 'Indie Flower', cursive;
     font-size:30px;
 
 }
+.nav {
+    width: 100%;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+}
+
