--- a/02week/blog/css/style.css
+++ b/02week/blog/css/style.css
@@ -3,7 +3,6 @@ body {
     background-image: url("/51995654.jpg");
     background-repeat: no-repeat;
     background-size: 160%;
-    background-
 }
 main {
     width: 600px;
@@ -18,6 +17,10 @@ article {
     border-radius: 200px;
     text-align: center;
 }
+div {
+    background-color: azure;
+    border-radius:  100px;
+}
 body {
     font-family: 'Permanent Marker', cursive;
 }
@@ -25,5 +28,4 @@ h2:hover {
     color: green;
     font-size: 200% ;
     text-shadow: 3px 2px red;
-
 }
