header fixes/button enabled

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -1,9 +1,10 @@
 header {
 background-color: #193A55;
 height: 90px;
-width: 100%;
+width: 103%;
 padding: 0px;
-margin:0px;
+bottom:8px;
+right: 15px;
 border-bottom: 2px solid white;
 position: relative;
 }
@@ -15,6 +16,7 @@ h1 img {
 }
 body {
     background-image: url(/img/airline.jpg);
+    padding: 0px;
 }
 h1 {
     float: left;
@@ -148,4 +150,7 @@ select {
     color: white;
     margin: 0px;
     margin-top: 10px;
+  }
+  .lastrow a {
+      margin: 0px;
   }
