--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -852,5 +852,46 @@ body {
   background-image: url("../img/materials/itemOreIron.png");
   background-size: 100% 100%;
 }
+/* --- Buildings item creation --- */
+.itemConstructBuilding{
+  display: none;
+  width: 100%; 
+  height: 85vh;
+  top: 15vh;
+  left: 0; 
+  background-color: lightblue;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.creatableItems{
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: aqua;
+}
+
+.outterItemCreate{
+  height: auto;
+  width: auto;
+}
+.outterItemCreate > div:nth-of-type(1){
+  height: 20px;
+  width: 104px;
+}
+
+.outterItemCreate > div:nth-of-type(2){
+  height: 104px;
+  width: 104px;
+}
+
+.outterItemCreate > div:nth-of-type(3){
+  height: 50px;
+  width: 104px;
+}
 
 /*   */
