airline web page

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -97,8 +97,20 @@ section input {
     background-color: rgb(19,55,84);
 }
 
+.flight input {
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    text-align: left;
+    font-size: 14px;
+}
+
 .calender input {
     color: white;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: 14px;
+    text-align: center;
 }
 
 .passengers {
