--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,183 @@
+html,
+body {
+    font-family: 'Podkova', Georgia, serif;
+    background-color: hsl(0, 0%, 20%);
+}
 
+/* Navigation */
+
+.navBar {
+    position: fixed;
+    width: 100%;
+    background-color: hsl(222, 10%, 74%);
+    border-top: hsl(222, 10%, 94%) 3px solid;
+    border-bottom: hsl(46, 100%, 50%) 3px solid;
+    box-shadow: 0 5px 20px 0 hsl(0, 0%, 20%, 0.5);
+}
+
+.navContent {
+    height: 70px;
+    max-width: 940px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: center;
+}
+
+.logo {
+    height: 80%;
+    margin: 0 20px;
+}
+
+.navLink {
+    font-family: 'Teko', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    text-transform: uppercase;
+    color: hsl(0, 0%, 20%);
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+.navLink:hover {
+    text-decoration: underline;
+}
+
+/* Hero image section */
+
+.hero {
+    width: 100%;
+    padding-top: 70px;
+    min-height: 300px;
+    background-image: url(../img/msystems-hero-banner.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.motto {
+    font-family: 'Teko', sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: hsl(46, 100%, 50%);
+    background-color: hsl(0, 0%, 20%, .8);
+    border: hsl(46, 100%, 50%) 4px solid;
+    padding: 10px 10px 4px 10px;
+    margin: 20px;
+}
+
+/* Services section */
+
+.servicesSection {
+    background-color: hsl(46, 100%, 50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+h1 {
+    font-family: 'Teko', sans-serif;
+    font-weight: 700;
+    font-size: 54px;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-align: center;
+    margin: 40px 0 0 0;
+}
+
+p.serviceDescription {
+    max-width: 940px;
+    font-size: 22px;
+    line-height: 33px;
+    padding: 0 40px;
+    text-align: center;
+}
+
+.services {
+    max-width: 940px;
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.serviceCard {
+    background-color: white;
+    max-width: 300px;
+    padding: 30px;
+    margin: 20px;
+    border-radius: 20px;
+    box-shadow: 0 2px 40px 0 hsla(33, 100%, 26%, 0.5), inset 0 -2px 50px 0 hsla(0, 0%, 20%, 0.2);
+}
+
+.serviceImage {
+    width: 100%;
+}
+
+h2 {
+    font-family: 'Teko', sans-serif;
+    font-weight: 700;
+    font-size: 32px;
+    text-transform: uppercase;
+    border-left: hsl(46, 100%, 50%) 6px solid;
+    padding-left: 10px;
+    margin: 10px 0 0 0;
+}
+
+p.description {
+    font-size: 16px;
+    line-height: 24px;
+    margin: 10px 0 0 0;
+}
+
+.estimate {
+    font-family: 'Teko', sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: hsl(0, 0%, 20%);
+    border: hsl(0, 0%, 20%) 3px solid;
+    border-radius: 5px;
+    padding: 10px 30px 4px;
+    margin: 20px 0 80px 0;
+}
+
+a.galleryLink {
+    color: hsl(0, 0%, 20%);
+}
+
+/* About Us section */
+
+section.about {
+    color: hsl(46, 100%, 50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+img.aboutUs {
+    width: 80%;
+    max-width: 940px;
+    margin: 20px 0 0 0;
+}
+
+div.aboutUs {
+    border-left: hsl(46, 100%, 50%) 5px solid;
+    font-size: 18px;
+    line-height: 24px;
+    width: 60%;
+    max-width: 860px;
+    margin: -60px 0 100px 0;
+    background-color: hsl(0, 0%, 20%);
+    padding: 0 30px;
+}
+
+a.whiteLink {
+    color: white;
+}
