added stat tracking sections

--- a/checkpoint3/css/style.css
+++ b/checkpoint3/css/style.css
@@ -91,8 +91,36 @@ main {
   flex-direction: column;
   align-items: flex-start;
 }
+#current-upgrades p {
+  margin: 0;
+  text-align: left;
+}
 #current-upgrades .upgrade {
   margin-top: .5rem;
+}
+#player-stats {
+  position: absolute;
+  padding: 1rem 0 0 2rem;
+  top: 300px;
+  left: 0;
+  font-size: .8rem;
+}
+#player-stats p {
+  color: #e7e5df;
+  text-align: left;
+  margin: 0;
+}
+#apprentice-stats {
+  position: absolute;
+  padding: 1rem 0 0 2rem;
+  top: 400px;
+  left: 0;
+  font-size: .8rem;
+}
+#apprentice-stats p {
+  color: #e7e5df;
+  text-align: left;
+  margin: 0;
 }
 #next-weapon-level {
   position: absolute;
@@ -107,6 +135,9 @@ main {
   left: 0;
   color: #e7e5df;
   font-size: 1.2rem;
+}
+.hidden {
+  display: none;
 }
 #shop {
   display: grid;
