final checkpoint...dont like it

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -11,6 +11,7 @@ nav{
 
 }
 h1{
+    /* position: inherit; */
     font-family: delius swash caps;
     display: flex;
     justify-content: center;
@@ -58,7 +59,7 @@ h3{
 button{
     font-family: delius swash caps;
     list-style-type: none;
-    display: flex;
+    display: inline-flex;
     justify-content: flex-end;
     flex-direction: row;
     color:rgb(133, 55, 72);
