added currency section

--- a/checkpoint3/css/style.css
+++ b/checkpoint3/css/style.css
@@ -122,6 +122,19 @@ main {
   text-align: left;
   margin: 0;
 }
+
+#currency {
+  position: absolute;
+  padding: 1rem 0 0 2rem;
+  top: 500px;
+  left: 0;
+  font-size: .8rem;
+}
+#currency p {
+  color: #e7e5df;
+  text-align: left;
+  margin: 0;
+}
 #next-weapon-level {
   position: absolute;
   padding: 1rem 0 0 2rem;
