changed header and form background colours

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -8,7 +8,7 @@ header {
     position: fixed;
     top: 0;
     height: 60px;
-    background-color: #123754;
+    background-color: #193A55;
     width: 100%;
     border-bottom: 1px solid white;
 }
@@ -59,7 +59,7 @@ header {
     width: 300px;
     margin-left: 60px;
     margin-top: 140px;
-    background-color: #123754;
+    background-color: #193A55;
     border: none;
     border-radius: 4px;
 }
@@ -129,7 +129,7 @@ header {
     border-radius: 4px;
     margin: 11px;
     border: 1px solid white;
-    background-color: #123754;
+    background-color: #193A55;
     font-family: 'Open Sans', sans-serif;
     font-size: 10px;
     color: white;
@@ -171,7 +171,7 @@ header {
     height: 30px;
     width: 50px;
     margin-right: 18px;
-    background-color: #123754;
+    background-color: #193A55;
     border: 1px solid white;
     border-radius: 4px;
     font-family: 'Open Sans', sans-serif;
