more currency section changes

--- a/checkpoint3/css/style.css
+++ b/checkpoint3/css/style.css
@@ -80,11 +80,10 @@ main {
   padding: 1.8rem 0 0 2rem;
   top: 50px;
   left: 0;
-  font-size: .8rem;
 }
 #currency p {
+  font-size: 1rem;
   color: #e7e5df;
-  text-align: left;
   margin: 0;
 }
 #next-weapon-level {
