--- a/challenges/Checkpoint-3/css/style.css
+++ b/challenges/Checkpoint-3/css/style.css
@@ -1,31 +1,92 @@
 body {
-  background-color: pink;
+  padding-top: 30px;
+  background-color: white;
+  width: 500px;
+  margin: auto;
+  text-align: center;
 }
-#cookie {
-  height: 300px;
+
+p {
+  font-size: 20px;
+  color: black;
+  display: block;
+  margin: 5px;
+  font-family: "Kalam", cursive;
+}
+
+#space {
+  margin: auto;
+  text-align: center;
+  padding-top: 20px;
+  margin-bottom: 40px;
+  font-size: 30px;
+  font-family: "Kalam", cursive;
+  border: 5px solid black;
+  border-radius: 10px;
+  background-color: #808000;
+  color: white;
+  width: 389px;
+  height: 60px;
+}
+.image-cookie {
+  margin-bottom: 40px;
   width: 300px;
-  background-color: brown;
-  border-radius: 150px;
+  height: 300px;
+}
+#shine {
+  font-family: "Kalam", cursive;
+  color: 402d2d;
+  padding: 40px 0;
+  font-weight: 800;
+  font-size: 2em;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+  overflow: hidden;
+}
+table {
+  margin-top: 10px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border-collapse: collapse;
+  width: 100%;
 }
 
-img {
-  transition: all 3s;
-  transition-timing-function: linear;
+tr td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 2px solid green;
+  font-family: "Kalam", cursive;
+}
+tr:hover {
+  background-color: #808000;
 }
 
-#currentTotal {
-  width: 150px;
+#numbers {
+  margin: auto;
+  text-align: center;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  font-size: 30px;
+  border: 5px solid;
+  border-radius: 10px;
+  background-color: green;
+  width: 200px;
+  height: 60px;
+  font-family: "Kalam", cursive;
+  font-color: white;
+}
+
+#upgradeLevel {
+  margin: auto;
+  text-align: center;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  font-size: 30px;
+  border: 5px solid;
+  border-radius: 10px;
+  background-color: #90ee90;
+  width: 300px;
   height: 50px;
-  border: 1px solid black;
-  text-align: center;
-  font-size: 48px;
-}
-
-.button {
-  width: 150px;
-  height: 20px;
-  border: 1px solid black;
-  border-radius: 25px;
-  text-align: center;
-  cursor: pointer;
+  font-family: "Kalam", cursive;
 }
