started js for clickers

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -921,7 +921,7 @@ body {
   width: 104px;
 }
 
-/*    */
+/*     */
 
 .shopOpen{
   display: flex;
@@ -995,7 +995,7 @@ body {
 }
 
 .loomLarge{
-  background-image: url("../img/construction/objBuildLoom.pngLarge");
+  background-image: url("../img/construction/objBuildLoomLarge.png");
   background-size: 100% 100%;
   width: 640px;
   height: 640px;
