--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -36,46 +36,54 @@ nav{
 .icon_text{
     display: inline;
     padding: 3px;
+    opacity: .5;
 }
 
 .sect1{
     width: 450px;
-    border: 2px solid red;
     position: fixed;
     top: 200px;
     left: 50px;
+    background-color: #0D67BD;
+    border-top-left-radius: 5px;
 }
 
 .buttons{
-    outline: 2px solid red;
+}
+.plane_icon{
+    padding-left: 50px;
+}
+.car_icon{
+    padding-left: 50px;
+}
+.hotel_icon{
+    padding-left: 50px;
 }
 .plane_button{
-    outline: 2px solid red;
     width: 150px;
+    position: absolute;
     background-color: #0D67BD;
     float: left;
-    border-radius: 5px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 }
 .hotel_button{
-    outline: 2px solid red;
     width: 150px;
     background-color: #018D80;
     float: right;
-    border-radius: 5px;
+    border-top-right-radius: 5px;
 }
 .car_button{
-    outline: 2px solid red;
     width: 150px;
     background-color: #018D80;
     float: right;
-    border-radius: 5px;
+    border-top-left-radius: 5px;
 }
 
 .sect2{
     width: 450px;
     height: 100px;
     background-color: #193A55;
-    border: 2px solid red;
     position: fixed;
     top: 255.57px;
     left: 50px;
@@ -83,7 +91,6 @@ nav{
 }
 
 .departbox{
-    outline: 2px solid red;
     margin: 15px;
 }
 
@@ -95,6 +102,8 @@ nav{
     
 }
 .depart_box{
+    background-color: #193A55;
+    color: white;
     border: 2px solid white;
     width: 150px;
     float: left;
@@ -103,6 +112,8 @@ nav{
     margin: 25px;
 }
 .arrive_box{
+    background-color: #193A55;
+    color: white;
     border: 2px solid white;
     width: 150px;
     float: right;
@@ -116,11 +127,9 @@ nav{
     width: 450px;
     height: 100px;
     background-color: #193A55;
-    border: 2px solid red;
     position: fixed;
     top: 325px;
     left: 50px;
-    border-radius: 5px;
 }
 
 .time_box{
@@ -131,6 +140,8 @@ nav{
     
 }
 .startdate_box{
+    background-color: #193A55;
+    color: white;
     border: 2px solid white;
     width: 150px;
     float: left;
@@ -139,10 +150,86 @@ nav{
     margin: 25px;
 }
 .enddate_box{
+    background-color: #193A55;
+    background: #193A55;
+    color: white;
     border: 2px solid white;
     width: 150px;
     float: right;
     border-radius: 5px;
     padding: 10px;
     margin: 25px;
+}
+
+.sect4{
+    width: 450px;
+    height: 100px;
+    background-color: hsl(207, 55%, 22%);
+    position: fixed;
+    top: 425px;
+    left: 50px;
+}
+.passengers_sect{
+    color: white;
+    font-size: 10pt;
+    width: 450px;
+    position: fixed; 
+}
+.passengers{
+    width: 60px;
+    float: left;
+    border-radius: 5px;
+    padding: 10px;
+    margin:10px;
+    margin-left: 25px;
+}
+.number_box{
+    border: 2px solid white;
+    width: 40px;
+    float: left;
+    border-radius: 5px;
+    padding: 10px;
+    margin:10px;
+    margin-left: 25px;
+}
+.number_1{
+    float: left;
+
+}
+.down{
+    float: right;
+}
+.radio_btn{
+    width: 150px;
+    float: left;
+    border-radius: 5px;
+    padding: 10px;
+    margin:10px;
+    margin-left: 35px;
+    
+}
+.sect5{
+    width: 450px;
+    color: white;
+    font-size: 12pt;
+    height: 70px;
+    background-color: #193A55;
+    position: fixed;
+    top: 500px;
+    left: 50px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+
+}
+.search_btn{
+    background-color: #0D67BD;
+    width: 400px;
+    margin-left: 35px;
+    color: white;
+    height: 40px;
+    border-radius: 5px;
+    text-align: center;
+}
+.search_text{
+    padding-top: 7px;
 }
