corrected tile again

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -387,27 +387,27 @@ body {
 }
 
 .jackPlane {
-  background-image: url("../img/items/woodWorkShop/itemJackPlane.png");
+  background-image: url("../img/items/WoodWorkShop/itemJackPlane.png");
   background-size: 100% 100%;
 }
 
 .bucket {
-  background-image: url("../img/items/woodWorkShop/itemBucket.png");
+  background-image: url("../img/items/WoodWorkShop/itemBucket.png");
   background-size: 100% 100%;
 }
 
 .plank {
-  background-image: url("../img/items/woodWorkShop/itemPlank.png");
+  background-image: url("../img/items/WoodWorkShop/itemPlank.png");
   background-size: 100% 100%;
 }
 
 .rope {
-  background-image: url("../img/items/woodWorkShop/itemRope.png");
+  background-image: url("../img/items/WoodWorkShop/itemRope.png");
   background-size: 100% 100%;
 }
 
 .ropeLadder {
-  background-image: url("../img/items/woodWorkShop/itemRopeLadder.png");
+  background-image: url("../img/items/WoodWorkShop/itemRopeLadder.png");
   background-size: 100% 100%;
 }
 
@@ -721,7 +721,7 @@ body {
   height: 200px;
 }
 .woodWorkShop{
-  background-image: url("../img/construction/objBuildwoodWorkShop.png");
+  background-image: url("../img/construction/objBuildWoodWorkShop.png");
   background-size: 100% 100%;
   width: 312px;
   height: 328px;
@@ -933,8 +933,8 @@ body {
   width: 528px;
   height: 400px;
 }
-.woodWorkShopLarge{
-  background-image: url("../img/construction/objBuildwoodWorkShopLarge.png");
+.WoodWorkShopLarge{
+  background-image: url("../img/construction/objBuildWoodWorkShopLarge.png");
   background-size: 100% 100%;
   width: 624px;
   height: 656px;
