corrected tile again

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -387,27 +387,27 @@ body {
 }
 
 .jackPlane {
-  background-image: url("../img/items/WoodWorkShop/itemJackPlane.png");
+  background-image: url("../img/items/WoodWorkshop/itemJackPlane.png");
   background-size: 100% 100%;
 }
 
 .bucket {
-  background-image: url("../img/items/WoodWorkShop/itemBucket.png");
+  background-image: url("../img/items/WoodWorkshop/itemBucket.png");
   background-size: 100% 100%;
 }
 
 .plank {
-  background-image: url("../img/items/WoodWorkShop/itemPlank.png");
+  background-image: url("../img/items/WoodWorkshop/itemPlank.png");
   background-size: 100% 100%;
 }
 
 .rope {
-  background-image: url("../img/items/WoodWorkShop/itemRope.png");
+  background-image: url("../img/items/WoodWorkshop/itemRope.png");
   background-size: 100% 100%;
 }
 
 .ropeLadder {
-  background-image: url("../img/items/WoodWorkShop/itemRopeLadder.png");
+  background-image: url("../img/items/WoodWorkshop/itemRopeLadder.png");
   background-size: 100% 100%;
 }
 
@@ -720,8 +720,8 @@ body {
   width: 264px;
   height: 200px;
 }
-.woodWorkShop{
-  background-image: url("../img/construction/objBuildWoodWorkShop.png");
+.WoodWorkShop{
+  background-image: url("../img/construction/objBuildWoodWorkshop.png");
   background-size: 100% 100%;
   width: 312px;
   height: 328px;
@@ -933,8 +933,8 @@ body {
   width: 528px;
   height: 400px;
 }
-.WoodWorkShopLarge{
-  background-image: url("../img/construction/objBuildWoodWorkShopLarge.png");
+.WoodWorkshopLarge{
+  background-image: url("../img/construction/objBuildWoodWorkshopLarge.png");
   background-size: 100% 100%;
   width: 624px;
   height: 656px;
