corrected tile again

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -720,7 +720,7 @@ body {
   width: 264px;
   height: 200px;
 }
-.WoodWorkShop{
+.woodWorkShop{
   background-image: url("../img/construction/objBuildWoodWorkshop.png");
   background-size: 100% 100%;
   width: 312px;
