corrected tile again

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -466,7 +466,7 @@ body {
   background-size: 100% 100%;
 }
 
-/* --- Build the items grid -- */
+/* --- Build the items grid --- */
 
 .itemGrid1 {
   grid-area: item1;
