corrected tile again

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -376,7 +376,7 @@ body {
   background-size: 100% 100%;
 }
 
-.driedJute {
+.dryedJute {
   background-image: url("../img/items/huntersTent/itemDryJute.png");
   background-size: 100% 100%;
 }
