corrected tile again

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -933,7 +933,7 @@ body {
   width: 528px;
   height: 400px;
 }
-.woodWorkshopLarge{
+.woodWorkShopLarge{
   background-image: url("../img/construction/objBuildWoodWorkshopLarge.png");
   background-size: 100% 100%;
   width: 624px;
