--- a/checkpoint-3/css/style.css
+++ b/checkpoint-3/css/style.css
@@ -38,38 +38,25 @@ main {
   width: 70vw;
   margin: 50px;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 150px 250px 100px 900px 850px;
+  grid-template-rows: 150px 250px 150px;
   justify-items: center;
   grid-template-areas:
     "box-1 box-1"
     "box-3 box-2"
     "box-4 box-4"
-    "box-5 box-5"
-    "box-6 box-6"
 }
 
 .box-1 {
   grid-area: box-1;
 }
-
 .box-2 {
   grid-area: box-2;
 }
-
 .box-3 {
   grid-area: box-3;
 }
-
 .box-4 {
   grid-area: box-4;
-}
-
-.box-5 {
-  grid-area: box-5;
-}
-
-.box-6 {
-  grid-area: box-6;
 }
 
 #scorecounter {
@@ -131,244 +118,4 @@ input:hover {
   100% {
     transform: rotate(-360deg);
   }
-}
-
-/* div surrounding entire minesweeper game */
-.minesweeper {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-#scorekeeper {
-  font-size: 24px;
-}
-
-.title {
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 32px;
-  text-align: center;
-}
-
-.titleimg {
-  width: 100%;
-  height: 100px;
-  margin-bottom: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.titleimg2 {
-  background: url("../img/minefield.jpg");
-  background-size: cover;
-  background-size: 500px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.titleimg3 {
-  background: url("../img/memory.png");
-  background-size: cover;
-  background-size: 500px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-#settings {
-  text-align: center;
-  margin-top: 50px;
-  width: 450px;
-  font-weight: bold;
-  border-radius: 2px;
-  position: relative;
-}
-
-#difficulty {
-  list-style: none;
-  padding: 0;
-  padding-left: 10px;
-  display: inline-block;
-}
-
-#difficulty li {
-  background-color: #bdbdbd;
-  border-top: 2px solid #f8f8f8;
-  border-left: 2px solid #f8f8f8;
-  border-bottom: 1px solid #818181;
-  border-right: 1px solid #818181;
-  color: black;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 18px;
-  text-align: center;
-  padding: 6px 8px;
-  transition: all 0.3s ease-in-out;
-}
-
-#difficulty li:hover {
-  background-color: lightblue;
-  color: black;
-  transition: all 0.3s ease-in-out;
-}
-
-#difficulty li.selected {
-  background-color: black;
-  color: white;
-}
-
-#board {
-  border: 10px solid #bdbdbd;
-  margin: 20px;
-}
-
-.square {
-  background-color: #bdbdbd;
-  display: inline-block;
-  border-top: 2px solid #f8f8f8;
-  border-left: 2px solid #f8f8f8;
-  border-bottom: 1px solid #818181;
-  border-right: 1px solid #818181;
-  margin: 0;
-  cursor: pointer;
-  width: 25px;
-  height: 25px;
-  font-size: 16px;
-  text-align: center;
-  transition: all 0.2s ease-in-out;
-}
-
-.square:hover {
-  background-color: lightblue;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-}
-
-#newgame {
-  width: 40%;
-  background-color: #bdbdbd;
-  border-top: 2px solid #f8f8f8;
-  border-left: 2px solid #f8f8f8;
-  border-bottom: 1px solid #818181;
-  border-right: 1px solid #818181;
-  color: black;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 18px;
-  text-align: center;
-  padding: 6px 8px;
-  transition: all 0.3s ease-in-out;
-}
-
-#newgame:hover {
-  background-color: lightblue;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-}
-
-.chosen {
-  border-top: 2px solid #8e8e8e;
-  border-left: 2px solid #8e8e8e;
-  border-bottom: 1px solid #8e8e8e;
-  border-right: 1px solid #8e8e8e;
-}
-
-/* Classes for assigning colors */
-.red {
-  color: red;
-  font-weight: bold;
-}
-
-.blue {
-  color: blue;
-  font-weight: bold;
-}
-
-.green {
-  color: green;
-  font-weight: bold;
-}
-
-.black {
-  color: black;
-  font-weight: bold;
-}
-
-.bomb {
-  background-color: red;
-}
-
-.imgbomb {
-  height: 15px;
-  width: 15px;
-}
-
-/* ////////////////////////////////////////////////////////////////////////////////////////// */
-/* Matching Game */
-.matchinggame {
-  width: 70vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-#board2 {
-  margin: 40px;
-}
-
-.square2 {
-  background-color: rgb(46, 61, 73);
-  color: white;
-  display: inline-block;
-  border: 2px solid none;
-  margin: 5px;
-  cursor: pointer;
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
-  font-size: 32px;
-  font-weight: bold;
-  text-align: center;
-  transition: all 0.3s ease-in-out;
-  line-height: 100px;
-}
-
-.square2:hover {
-  box-shadow: inset 0px 0px 0px 5px orange;
-  transition: all 0.3s ease-in-out;
-}
-
-.flipped {
-  background-color: rgb(2, 204, 186);
-  transition: all 0.3s ease-in-out;
-}
-
-#newgame2 {
-  background-color: rgb(46, 61, 73);
-  color: white;
-  padding: 6px 8px;
-  width: 47%;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 18px;
-  border-radius: 5px;
-  text-align: center;
-  transition: all 0.3s ease-in-out;
-  margin-bottom: 20px;
-}
-
-#newgame2:hover {
-  background-color: rgb(2, 204, 186);
-  transition: all 0.3s ease-in-out;
-}
-
-#winmessage {
-  font-size: 28px;
-  font-weight: bold;
 }
