Added color to matched squares in memory game

--- a/checkpoint-3/css/memorystyle.css
+++ b/checkpoint-3/css/memorystyle.css
@@ -93,6 +93,9 @@ main {
   background-color: rgb(2, 204, 186);
   transition: all 0.3s ease-in-out;
 }
+.matched {
+  box-shadow: inset 0px 0px 0px 5px black;
+}
 
 #newgame2 {
   background-color: rgb(46, 61, 73);
