--- a/09week/customer-satisfaction/css/style.css
+++ b/09week/customer-satisfaction/css/style.css
@@ -3,6 +3,10 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  background-image: url(https://github.com/konarie1990/web-workbook/blob/gh-pages/portfolio/img/astronomy-constellation-dark-998641.jpg?raw=true);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .container {
