finished simple cookie clicker

--- a/checkpoint3/style.css
+++ b/checkpoint3/style.css
@@ -1,23 +1,26 @@
 body {
-  margin: 0;
-  padding: 0;
+background: linear-gradient(-90deg, lightblue, black);
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+align-items: center;
 }
 
-.container {
-  background-color: black;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+main {
+  margin: 100px auto;
+  text-align: center;
 }
 
-.box {
-  height: 100vh;
-  width: 20%;
-  background-color: green;
+h3 {
+  font-size: 3em;
 }
 
-.box2 {
-  height: 100vh;
-  width: 50%;
-  background-color: pink;
+button {
+  padding: 20px;
+  background: transparent;
+  text-shadow: 1px 1px 1px #202020;
+  font-family: "Lato", sans-serif;
+  font-size: 18pt;
+  border: 1px solid lightblue;
+  color: lightblue;
 }
