took some doing but i think we have it for the most part needs win condition

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -927,6 +927,14 @@ body {
   display: flex;
 }
 
+.shopClosed{
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(10px);
+}
+
 .outpostLarge{
   background-image: url("../img/construction/outpostLarge.png");
   background-size: 100% 100%;
