--- a/09week/customer-satisfaction/css/style.css
+++ b/09week/customer-satisfaction/css/style.css
@@ -1,24 +1,87 @@
+body {
+  font-family: 'Ubuntu', sans-serif;
+  background-image:url('../img/hypnotize.png');
+}
 .navi {
-    height: 67px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: auto;
-    grid-gap: 1em;
-    align-items: center;
-    text-align: center;
-  }
+  height: 83px;
+  background-color:rgb(53, 6, 53);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: auto;
+  grid-gap: 1em;
+  align-items: center;
+  text-align: center;
+}
 
-  .navlink {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1.2em;
-    text-transform: uppercase;
-    text-decoration: none;
-    color:antiquewhite;
-  }
-  
-  .navlink:hover {
-    color:antiquewhite;
-    border-left: 1px solid antiquewhite;
-    border-right: 1px solid antiquewhite;
-    padding: 1em 1em;
-  }
+.navlink {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  text-decoration: none;
+  color:white;
+}
+
+.navlink:hover {
+  color:grey;
+  border-left: 1px solid grey;
+  border-right: 1px solid grey;
+  padding: 1em 1em;
+}
+
+.job{
+  text-shadow: 1px 1px 2px white;
+  font-family: 'pacifico';
+  font-size: 28px;
+  color: grey;
+}
+
+.everything {
+  padding: 10px;
+  margin: 10px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height:100%;
+  width: 100%;
+}
+ .container {
+  border: 3px rgb(53, 6, 53) solid;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+  width: 50vw;
+}
+ .input-form {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+ form {
+  height: 100%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+ 
+ label{
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  font-size: 23px;
+}
+ input {
+  height: 30px;
+}
+ #message {
+  height: 80px;
+}
+ button {
+  padding: 10px;
+}
